--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,4 +21,11 @@ body {
 	margin: auto;
 	width: 40%;
 	
+}#search {
+	border-style: outset;
+	border-width: medium;
+	border-color: red;
+	
+	width: 40%;
+	
 }
