--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ li{
     color:  #ffe5e5;
 }
 body {
-  background-image:("background.jpg");
+  background-image:url("background.jpg");
 ");
 }
 #box {
